Dodano zmiany wyglądu widoków logowania oraz rejestracji na te z wizualizacji

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="email">Email</string>
     <string name="login">Login</string>
     <string name="register">Register</string>
+    <string name="image_description">Logo aplikacji Pshepishnick</string>
+    <string name="welcome">Witaj w aplikacji\nPSHEPISHNICK</string>
 </resources>
