--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="register">Register</string>
     <string name="image_description">Logo aplikacji Pshepishnick</string>
     <string name="welcome">Witaj w aplikacji\nPSHEPISHNICK</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
